--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <a href="about/page.html">Относительная ссылка траницу в каталоге about</a><br>
         <a href="../page.html">Относительная ссылка на страницу в каталоге уровнем выше текущего</a><br>
         <a href="../../page.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a><br>
-        <p>Контекстная <a href="https://www.kubsu.ru/">ссылка в тексте </a>абзаца.</p></li><br>
+        <p>Контекстная <a href="https://www.kubsu.ru/">ссылка в тексте </a>абзаца.</p><br>
         <a href="https://externalsite.com#section">Ссылка на фрагмент страницы стороннего сайта</a><br>
         
-            <img src="Без имени.png" width="200" height="200" usemap="#map" alt="">
+            <img src="Nonename.png" width="200" height="200" usemap="#map" alt="">
             <map name="map">
                 <area shape="rect" coords="0,0,150,200" href="https://www.kubsu.ru/ru/university/departments" alt="Прямоугольная область">
-                <area shape="circle"area='' href="https://www.kubsu.ru/ru/fktipm" alt="Круглая область">
+                <area shape="circle" href="https://www.kubsu.ru/ru/fktipm" alt="Круглая область">
             </map>
         <br>
         <a href="#">Ссылка с пустым href</a><br>
