--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         
             <img src="Nonename.png" width="200" height="200" usemap="#map" alt="">
             <map name="map">
-                <area shape="rect" coords="0,0,150,200" href="https://www.kubsu.ru/ru/university/departments" alt="Прямоугольная область">
-                <area shape="circle" coords = "" href="https://www.kubsu.ru/ru/fktipm" alt="Круглая область">
+                <area shape="rect" coords="0,0,100,200" href="https://www.kubsu.ru/ru/university/departments" alt="Прямоугольная область">
+                <area shape="circle" coords = "100,0,200,200" href="https://www.kubsu.ru/ru/fktipm" alt="Круглая область">
             </map>
         <br>
         <a href="#">Ссылка с пустым href</a><br>
