--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<img
 							alt=""
 							height="300"
-							src="./img/image.jpg"
+							src="image.jpg"
 							usemap="#area1"
 							width="300"
 						/>
