--- a/index.html
+++ b/index.html
@@ -26,24 +26,14 @@
 						<a href="#" class="link__3">Ссылка 3</a>
 					</li>
 				</ul>
-				<h1 class = "h1__mobile">Название сайта</h1>
+				
 			</nav>
 			<div class="name">
 				<h1 class ="h1__PC">Название сайта</h1>
 			</div>
 		</header>
 		<main class="main">
-			<ul class="head__list__mobile"></ul>
-					<li class="head__item__mobile">
-						<a href="#" class="link__1">Ссылка меню 1</a>
-					</li>
-					<li class="head__item__mobile">
-						<a href="#" class="link__2">Ссылка 2</a>
-					</li>
-					<li class="head__item__mobile">
-						<a href="#" class="link__3">Ссылка 3</a>
-					</li>
-				</ul>
+			
 			<div class="container">
 				<h3>Список гиперссылок</h3>
 				<ul class="links">
@@ -72,7 +62,7 @@
 					</li>
 					<li><a href="/page&id=123">Ссылка с параметром id</a></li>
 					<li>
-						<a href="page.html"
+						<a href="image.html"
 							>Относительная ссылка на страницу в текущем каталоге</a
 						>
 					</li>
